# MatchPoint

./: CMakeLists.txt  CTestConfig.cmake  FindMatchPoint.cmake  MatchPointConfig.cmake.in  ReadMe.txt  UseMatchPoint.cmake.in  itk changes.txt  mapConfigure.h.in  mapCopyright.txt  mapGenerateMatchPointConfig.cmake
Applications/: CMakeLists.txt
Applications/Combiner/: CMakeLists.txt  files.cmake  tests.cmake
Applications/Combiner/include/: mapCombineRApplicationData.h  mapCombineRHelper.h
Applications/Combiner/source/: mapCombineR.cpp  mapCombineRApplicationData.cpp  mapCombineRHelper.cpp
Applications/Combiner/test/: mapCombineRBasicUsageTest.cpp  mapCombineRTests.cpp
Applications/Inverter/: CMakeLists.txt  files.cmake  tests.cmake
Applications/Inverter/include/: invertRApplicationData.h  invertRHelper.h
Applications/Inverter/source/: invertR.cpp  invertRApplicationData.cpp  invertRHelper.cpp
Applications/Inverter/test/: invertRBasicUsageTest.cpp  invertRSimpleMappingTest.cpp  invertRTests.cpp
Applications/Mapper/: CMakeLists.txt  files.cmake  tests.cmake
Applications/Mapper/include/: mapRApplicationData.h  mapRHelper.h
Applications/Mapper/source/: mapR.cpp  mapRApplicationData.cpp  mapRHelper.cpp
Applications/Mapper/test/: CMakeLists.txt  mapRBasicUsageTest.cpp  mapRSimpleMappingTest.cpp  mapRTests.cpp
Applications/Mapper4V/: CMakeLists.txt  files.cmake  tests.cmake
Applications/Mapper4V/include/: mapR4VHelper.h
Applications/Mapper4V/source/: mapR4V.cpp  mapR4VHelper.cpp
Applications/Matcher/: CMakeLists.txt  files.cmake  tests.cmake
Applications/Matcher/include/: matchRApplicationData.h  matchRHelper.h
Applications/Matcher/source/: matchR.cpp  matchRApplicationData.cpp  matchRHelper.cpp
Applications/Matcher/test/: matchRBasicUsageTest.cpp  matchRSimpleMappingTest.cpp  matchRSimpleRegTest.cpp  matchRTests.cpp
Code/: CMakeLists.txt
Code/Algorithms/Common/: CMakeLists.txt  files.cmake  tests.cmake
Code/Algorithms/Elastix/: CMakeLists.txt  files.cmake  tests.cmake
Code/Algorithms/FSL/: CMakeLists.txt  files.cmake  tests.cmake
Code/Algorithms/ITK/: CMakeLists.txt  files.cmake  tests.cmake
Code/Algorithms/Plastimatch/: CMakeLists.txt  files.cmake  tests.cmake
Code/Core/: CMakeLists.txt  files.cmake  tests.cmake
Code/Core/include/: mapAffineMatrixDecomposer.h  mapAffineMatrixDecomposer.tpp  mapAffineMatrixOffsetDecompositionPolicy.h  mapClassMacros.h  mapCombinationFunctorInterface.h  mapCombinationFunctorInterface.tpp  mapCombinedFieldBasedRegistrationKernel.h  mapCombinedFieldBasedRegistrationKernel.tpp  mapCombinedRegistrationKernel.h  mapCombinedRegistrationKernel.tpp  mapConcreteFieldBasedRegistrationKernel.h  mapConcreteFieldBasedRegistrationKernel.tpp  mapConcreteRegistrationKernel.h  mapConcreteRegistrationKernel.tpp  mapContinuous.h  mapContinuousElements.h  mapConvert.h  mapDefaultKernelInverter.h  mapDefaultKernelInverter.tpp  mapDefaultRegistrationTopologyPolicy.h  mapDefaultSLStaticPolicy.h  mapDefaultSLStaticPolicy.tpp  mapDimensionlessRegistrationKernelBase.h  mapDiscrete.h  mapDiscreteElements.h  mapEvents.h  mapExceptionObject.h  mapExceptionObjectMacros.h  mapFastLockedThreadingPolicy.h  mapFastLockedThreadingStaticPolicy.h  mapFastMutexLockSentinel.h  mapFieldBasedKernelInverter.h  mapFieldBasedKernelInverter.tpp  mapFieldBasedRegistrationKernel.h  mapFieldBasedRegistrationKernelInterface.h  mapFieldBasedRegistrationKernels.h  mapFieldByFieldFieldCombinationFunctor.h  mapFieldByFieldFieldCombinationFunctor.tpp  mapFieldByFieldInversionFunctor.h  mapFieldByFieldInversionFunctor.tpp  (+188 more)
Code/Core/source/: mapConvert.cpp  mapDimensionlessRegistrationKernelBase.cpp  mapEvents.cpp  mapExceptionObject.cpp  mapFastLockedThreadingPolicy.cpp  mapFastLockedThreadingStaticPolicy.cpp  mapFastMutexLockSentinel.cpp  mapFileDispatch.cpp  mapLogbook.cpp  mapLogbookImplementation.cpp  mapMappingException.cpp  mapMetaPropertyBase.cpp  mapMissingProviderException.cpp  mapModificationTimeValidator.cpp  mapObserverSentinel.cpp  mapPMVolume.cpp  mapRegistrationBase.cpp  mapRegistrationException.cpp  mapRepresentationException.cpp  mapSDElement.cpp  mapSDExceptions.cpp  mapSDStreamingInterface.cpp  mapSDXMLFileReader.cpp  mapSDXMLFileWriter.cpp  mapSDXMLStrReader.cpp  mapSDXMLStrWriter.cpp  mapServiceException.cpp  mapSingleThreadedThreadingPolicy.cpp  mapSyncObject.cpp  mapThreadEvents.cpp  mapXMLLogger.cpp
Code/Core/test/: mapAffineMatrixDecomposerTest.cpp  mapArtifactGenerator.cpp  mapArtifactGenerator.h  mapCombinationFunctorInterfaceTest.cpp  mapCombinedFieldBasedRegistrationKernelTest.cpp  mapCombinedRegistrationKernelTest.cpp  mapConcreteFieldBasedRegistrationKernelTest.cpp  mapCoreHeaderTest.cpp  mapCoreTests.cpp  mapDefaultKernelInverterTest.cpp  mapExceptionObjectMacrosTest.cpp  mapFieldBasedKernelInverterTest.cpp  mapFieldByFieldFieldCombinationFunctorTest.cpp  mapFieldByFieldInversionFunctorTest.cpp  mapFieldByFieldModelCombinationFunctorTest.cpp  mapFieldByFileLoadFunctorTest.cpp  mapFieldByModelFunctorTest.cpp  (+63 more)
Code/Deployment/: CMakeLists.txt  files.cmake  tests.cmake
Code/IO/: CMakeLists.txt  files.cmake  tests.cmake
Code/ITK/: CMakeLists.txt  files.cmake  tests.cmake
Code/Utilities/: CMakeLists.txt  files.cmake  tests.cmake
Examples/Algorithms/: CMakeLists.txt  mapDemoAutoSealedAlgorithm.cpp  mapDemoFixedITKImageRegistration.cpp  mapDemoHelloWorldRegistration1.cpp  mapDemoHelloWorldRegistration1Helper.cpp  mapDemoHelloWorldRegistration1Helper.h  mapDemoHelloWorldRegistration2.cpp  mapDemoHelloWorldRegistration3.cpp  mapDemoHelper.cpp  mapDemoHelper.h  mapDemoITKImageRegistration.cpp  mapDemoITKMultiResImageRegistration.cpp  mapDemoPropertiedAlgorithm.h  mapDemoPropertiedAlgorithm.tpp  mapDemoRegistrationAlgorithmTemplate.h
Examples/Deployment/: CMakeLists.txt  mapDemoDeploymentDLLDirectoryBrowser.cpp  mapDemoDeploymentPropertiedAlgorithm.cpp  mapDemoHelloWorldDeployment1.cpp  mapDemoHelloWorldDeployment2.cpp  mapDemoPropertiedAlgorithm2DDLL.cpp  mapDemoRegistrationAlgorithm2DDLL.cpp
Testing/: CMakeLists.txt
(+768 files in other folders)
