MAP_CREATE_MODULE(MAPDeployment DEPENDS MAPCore MAPAlgorithms)
MAP_CREATE_MODULE_TESTS(MAPDeployment PACKAGE_DEPENDS Litmus HEADER_TESTS)

IF (BUILD_TESTING)
	ADD_LIBRARY(mapTestAlgorithm SHARED test/mapTestAlgorithmDLL.cpp)
	ADD_LIBRARY(mapTestAlgorithmInvalid1 SHARED test/mapTestAlgorithmInvalid1DLL.cpp)
	ADD_LIBRARY(mapTestAlgorithmInvalid2 SHARED test/mapTestAlgorithmInvalid2DLL.cpp)
	ADD_LIBRARY(mapTestAlgorithmInvalid3 SHARED test/mapTestAlgorithmInvalid3DLL.cpp)
	ADD_LIBRARY(mapTestAlgorithmInvalid4 SHARED test/mapTestAlgorithmInvalid4DLL.cpp)
	ADD_LIBRARY(mapTestAlgorithmInvalid5 SHARED test/mapTestAlgorithmInvalid5DLL.cpp)
	ADD_LIBRARY(mapTestAlgorithmInvalid6 SHARED test/mapTestAlgorithmInvalid6DLL.cpp)
	ADD_LIBRARY(mapTestAlgorithmInvalid7 SHARED test/mapTestAlgorithmInvalid7DLL.cpp)
	ADD_LIBRARY(mapTestAlgorithmConfig SHARED test/mapTestAlgorithmConfigDLL.cpp)

	TARGET_LINK_LIBRARIES(mapTestAlgorithm MAPCore MAPAlgorithms MAPAlgorithmsITK MAPDeployment)
	TARGET_LINK_LIBRARIES(mapTestAlgorithmInvalid1 MAPCore MAPAlgorithms MAPAlgorithmsITK MAPDeployment)
	TARGET_LINK_LIBRARIES(mapTestAlgorithmInvalid2 MAPCore MAPAlgorithms MAPAlgorithmsITK MAPDeployment)
	TARGET_LINK_LIBRARIES(mapTestAlgorithmInvalid3 MAPCore MAPAlgorithms MAPAlgorithmsITK MAPDeployment)
	TARGET_LINK_LIBRARIES(mapTestAlgorithmInvalid4 MAPCore MAPAlgorithms MAPAlgorithmsITK MAPDeployment)
	TARGET_LINK_LIBRARIES(mapTestAlgorithmInvalid5 MAPCore MAPAlgorithms MAPAlgorithmsITK MAPDeployment)
	TARGET_LINK_LIBRARIES(mapTestAlgorithmInvalid6 MAPCore MAPAlgorithms MAPAlgorithmsITK MAPDeployment)
	TARGET_LINK_LIBRARIES(mapTestAlgorithmInvalid7 MAPCore MAPAlgorithms MAPAlgorithmsITK MAPDeployment)
	TARGET_LINK_LIBRARIES(mapTestAlgorithmConfig MAPCore MAPAlgorithms MAPAlgorithmsITK MAPDeployment)
ENDIF (BUILD_TESTING)

MAP_DEFINE_DEPLOYED_ALGORITHM(Dummy3DImageReg FILES "deployed/mapDummy3DImageReg.cpp" PROFILE "deployed/Dummy3DImageReg.profile" MODULE_DEPENDS MAPCore MAPAlgorithms MAPDeployment )
MAP_DEFINE_DEPLOYED_ALGORITHM(Dummy2DImageReg FILES "deployed/mapDummy2DImageReg.cpp" PROFILE "deployed/Dummy2DImageReg.profile" MODULE_DEPENDS MAPCore MAPAlgorithms MAPDeployment)