MAP_CREATE_MODULE(MAPAlgorithmsElastix DEPENDS MAPAlgorithms MAPUtilities MAPIO)
MAP_CREATE_MODULE_TESTS(MAPAlgorithmsElastix PACKAGE_DEPENDS Litmus HEADER_TESTS)

IF (BUILD_TESTING)
	ADD_EXECUTABLE(mapDummyElastix "test/mapDummyElastix.cpp")
	SET_TARGET_PROPERTIES(mapDummyElastix PROPERTIES OUTPUT_NAME "elastix")
	TARGET_LINK_LIBRARIES(mapDummyElastix MAPCore)

	ADD_EXECUTABLE(mapDummyTransformix "test/mapDummyTransformix.cpp")
	SET_TARGET_PROPERTIES(mapDummyTransformix PROPERTIES OUTPUT_NAME "transformix")
	TARGET_LINK_LIBRARIES(mapDummyTransformix MAPCore)
ENDIF (BUILD_TESTING)

MAP_DEFINE_DEPLOYED_ALGORITHM(ElxParameterFileCLI2DRegistration PROFILE "deployed/ElxParameterFileCLI2DRegistration.profile" FILES "deployed/mapElxParameterFileCLI2DRegistration.cpp" MODULE_DEPENDS MAPAlgorithmsElastix MAPDeployment)
MAP_DEFINE_DEPLOYED_ALGORITHM(ElxParameterFileCLI3DRegistration PROFILE "deployed/ElxParameterFileCLI3DRegistration.profile" FILES "deployed/mapElxParameterFileCLI3DRegistration.cpp" MODULE_DEPENDS MAPAlgorithmsElastix MAPDeployment)
MAP_DEFINE_DEPLOYED_ALGORITHM(ElxBSplineCLI2DRegistration PROFILE "deployed/ElxBSplineCLI2DRegistration.profile" FILES "deployed/mapElxBSplineCLI2DRegistration.cpp" MODULE_DEPENDS MAPAlgorithmsElastix MAPDeployment)
MAP_DEFINE_DEPLOYED_ALGORITHM(ElxBSplineCLI3DRegistration PROFILE "deployed/ElxBSplineCLI3DRegistration.profile" FILES "deployed/mapElxBSplineCLI3DRegistration.cpp" MODULE_DEPENDS MAPAlgorithmsElastix MAPDeployment)
