MAP_CREATE_MODULE(MAPAlgorithmsPlastimatch DEPENDS MAPAlgorithms MAPUtilities MAPIO)
MAP_CREATE_MODULE_TESTS(MAPAlgorithmsPlastimatch DEPENDS MAPAlgorithmsITK PACKAGE_DEPENDS Litmus HEADER_TESTS)

IF (BUILD_TESTING)
	ADD_EXECUTABLE(mapDummyPlastimatch "test/mapDummyPlastimatch.cpp")
	SET_TARGET_PROPERTIES(mapDummyPlastimatch PROPERTIES OUTPUT_NAME "plastimatch")
	TARGET_LINK_LIBRARIES(mapDummyPlastimatch MAPCore MAPAlgorithmsPlastimatch LitmusCommon)
ENDIF (BUILD_TESTING)

MAP_DEFINE_DEPLOYED_ALGORITHM(PlmParameterFileCLI2DRegistration PROFILE "deployed/PlmParameterFileCLI2DRegistration.profile" FILES "deployed/mapPlmParameterFileCLI2DRegistration.cpp" MODULE_DEPENDS MAPAlgorithmsPlastimatch MAPDeployment)
MAP_DEFINE_DEPLOYED_ALGORITHM(PlmParameterFileCLI3DRegistration PROFILE "deployed/PlmParameterFileCLI3DRegistration.profile" FILES "deployed/mapPlmParameterFileCLI3DRegistration.cpp" MODULE_DEPENDS MAPAlgorithmsPlastimatch MAPDeployment)
MAP_DEFINE_DEPLOYED_ALGORITHM(PlmBSplineCLI2DRegistration PROFILE "deployed/PlmBSplineCLI2DRegistration.profile" FILES "deployed/mapPlmBSplineCLI2DRegistration.cpp" MODULE_DEPENDS MAPAlgorithmsPlastimatch MAPDeployment)
MAP_DEFINE_DEPLOYED_ALGORITHM(PlmBSplineCLI3DRegistration PROFILE "deployed/PlmBSplineCLI3DRegistration.profile" FILES "deployed/mapPlmBSplineCLI3DRegistration.cpp" MODULE_DEPENDS MAPAlgorithmsPlastimatch MAPDeployment)
